# mys3client-gtk

./: .gitignore  INSTALL.md  LINGUAS  POTFILES  README.md  de.po  de.po~  en.po  es.po  es.po~  fr.po  meson.build  mys3-client.pot  todo.md  wip-todo.md
aws_sdk_test/: CMakeLists.txt  about-this-directory.md  main.cpp
po/: LINGUAS
res/: main_window.ui  mys3-client.gresource.xml  settings_dialog.ui
scripts/: build-aws-sdk.sh
src/: credential_storage.c  credential_storage.h  logging.c  logging.h  main.c  s3_client.c  s3_client.h  s3_client_cpp.cpp  s3_client_cpp.h  settings.c  settings.h
subprojects/: aws-sdk-cpp.wrap  scintilla.wrap
subprojects/patches/aws-sdk-cpp/: patch.diff
